--- a/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/admin/main.Master
+++ b/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/admin/main.Master
@@ -37,7 +37,7 @@
             <div class="navbar-wrapper">
                 <div class="navbar-header">
                     <ul class="nav navbar-nav flex-row">
-                        <li class="nav-item mobile-menu d-md-none mr-auto"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i class="ft-menu font-large-1"></i></a></li>
+                        <li class="nav-item mobile-menu d-md-none mr-auto"></li>
                         <li class="nav-item">
                             <a class="navbar-brand" href="#" onclick="HomePage()">
                                 <img class="brand-logo" alt="E.W.L" src="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/logo/EWLLogo.png">
@@ -45,15 +45,12 @@
                             </a>
                         </li>
                         <li class="nav-item d-md-none">
-                            <a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="la la-ellipsis-v"></i></a>
+                            <a class="nav-link open-navbar-container mt-2" data-toggle="collapse" data-target="#navbar-mobile"><i class="ft-menu font-large-1"></i></a>
                         </li>
                     </ul>
                 </div>
                 <div class="navbar-container content">
                     <div class="collapse navbar-collapse" id="navbar-mobile">
-                        <ul class="nav navbar-nav mr-auto float-left">
-                            <li class="nav-item d-none d-md-block"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i class="ft-menu"></i></a></li>
-                        </ul>
                         <ul class="nav navbar-nav float-right">
                             <li class="dropdown dropdown-user nav-item">
                                 <a class="dropdown-toggle nav-link dropdown-user-link mt-3" href="#" data-toggle="dropdown">
@@ -61,8 +58,8 @@
                                         <span class="user-name text-bold-700"><%=Session["Username"]!=null ? Session["Username"].ToString() : "-"%></span>
                                     </span>
                                 </a>
-                                <div class="dropdown-menu dropdown-menu-right">
-                                    <a class="dropdown-item" href="#"><i class="ft-power"></i>Logout</a>
+                                <div class="dropdown-menu dropdown-menu-left">
+                                    <a class="dropdown-item" href="#" onclick="Logout('Authorized')"><i class="ft-power"></i>Çıkış</a>
                                 </div>
                             </li>
                         </ul>
@@ -70,16 +67,7 @@
                 </div>
             </div>
         </nav>
-        <div class="main-menu menu-fixed menu-light menu-accordion menu-shadow" data-scroll-to-active="true">
-            <div class="main-menu-content">
-                <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
-                    <li class="nav-item"><a href="#" onclick="AddWord()"><i class="fa fa-plus"></i><span class="menu-title">Kelime Ekle</span></a></li>
-                    <li class="nav-item"><a href="#" onclick="DeleteWord()"><i class="fa fa-remove"></i><span class="menu-title">Kelime Sil</span></a></li>
-                    <li class="nav-item"><a href="#" onclick="UpdateWord()"><i class="fa fa-wrench"></i><span class="menu-title">Kelime Güncelle</span></a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="app-content content">
+        <div class="app-content content c-content">
             <div class="content-wrapper">
                 <div class="content-header row">
                 </div>
@@ -90,10 +78,7 @@
             </div>
         </div>
         <script src="<%# Page.ResolveUrl("~") %>/asset/js/JQuery/jquery-3.4.1.min.js"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/js/JQuery-Validation/jquery.validate.min.js"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/js/Alertify/alertify.min.js"></script>
-        <asp:ContentPlaceHolder ID="cphJS" runat="server">
-        </asp:ContentPlaceHolder>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/chart.min.js" type="text/javascript"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/raphael-min.js" type="text/javascript"></script>
@@ -104,6 +89,8 @@
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/core/app-menu.js" type="text/javascript"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/core/app.js" type="text/javascript"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/scripts/customizer.js" type="text/javascript"></script>
+        <asp:ContentPlaceHolder ID="cphJS" runat="server">
+        </asp:ContentPlaceHolder>
     </form>
 </body>
 </html>
