--- a/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/admin/main.Master
+++ b/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/admin/main.Master
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui" />
     <meta name="description" content="Yazılım Yapımı Dönem Projesi" />
     <meta name="keywords" content="" />
-    <meta name="author" content="PIXINVENT" />
+    <meta name="author" content="" />
     <link rel="apple-touch-icon" href="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/ico/apple-icon-120.png" />
     <link rel="shortcut icon" type="image/x-icon" href="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/ico/favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700" rel="stylesheet">
