--- a/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/asset/css/Custom/MemberLogin.css
+++ b/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/asset/css/Custom/MemberLogin.css
@@ -1,4 +1,5 @@
-﻿html,
+﻿@import url("Utils.css");
+html,
 body {
     height: 100%;
 }
@@ -118,15 +119,45 @@ html .btn-with-arrow.btn-quaternary.btn-outline:hover span {
     transition: all 0.1s linear;
 }
 
-[type=text] {
+html .btn-with-arrow.btn-singup.btn-outline {
+    border-color: #ffc107 !important;
+}
+
+    html .btn-with-arrow.btn-singup.btn-outline:hover {
+        font-weight: bold;
+        color: #000;
+        background-color: #ffc107;
+    }
+
+html .btn-with-arrow.btn-singup {
+    background-color: transparent;
+    border-color: transparent;
+    color: #ffc107;
+}
+
+[type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
+    cursor: pointer;
+}
+
+html .btn-with-arrow.btn-singup.btn-outline:hover span {
+    background-color: #816100 !important;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+
+#SignIn > [type=text] {
     border-radius: .25rem .25rem 0 0;
 }
 
-[type=password] {
+#SignIn > [type=password] {
     border-radius: 0 0 .25rem .25rem;
 }
-.ajs-message.ajs-customError {
-    color: #fff;
-    background-color: #d95c5c;
-    border-color: #31708f;
+
+#SignUp {
+    display: none;
+}
+
+.form-group {
+    margin-top: 25%;
 }
