--- a/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/main.Master
+++ b/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/main.Master
@@ -5,20 +5,89 @@
 <html lang="tr">
 <head runat="server">
     <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui" />
+    <link rel="apple-touch-icon" href="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/ico/apple-icon-120.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/ico/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700" rel="stylesheet" />
+    <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css" rel="stylesheet" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/css/Bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/css/Font-Awesome/font-awesome.min.css" rel="stylesheet" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/css/Alertify/alertify.min.css" rel="stylesheet" />
+    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/vendors.css" rel="stylesheet" type="text/css" />
+    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/app.css" rel="stylesheet" type="text/css" />
+    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/core/menu/menu-types/horizontal-menu.css" rel="stylesheet" type="text/css" />
+    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/core/colors/palette-gradient.css" rel="stylesheet" type="text/css" />
+    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/css/charts/jquery-jvectormap-2.0.3.css" rel="stylesheet" type="text/css" />
+    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/css/charts/morris.css" rel="stylesheet" type="text/css" />
+    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/fonts/simple-line-icons/style.css" rel="stylesheet" type="text/css" />
+    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/core/colors/palette-gradient.css" rel="stylesheet" type="text/css" />
+    <link href="<%# Page.ResolveUrl("~") %>/asset/css/Custom/MemberMaster.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="cphCSS" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="EWL" runat="server">
-        <asp:ContentPlaceHolder ID="cphContent" runat="server">
-        </asp:ContentPlaceHolder>
+        <nav class="header-navbar navbar-expand-md navbar navbar-with-menu navbar-without-dd-arrow navbar-static-top navbar-light navbar-brand-center">
+            <div class="navbar-wrapper">
+                <div class="navbar-header">
+                    <ul class="nav navbar-nav flex-row">
+                        <li class="nav-item mobile-menu d-md-none mr-auto mt-2"><a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="ft-menu"></i></a></li>
+                        <li class="nav-item">
+                            <a class="navbar-brand" href="index.html">
+                                <img class="brand-logo" alt="modern admin logo" src="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/logo/EWLLogo.png">
+                                <h3 class="brand-text">E.W.L</h3>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="navbar-container content">
+                    <div class="collapse navbar-collapse" id="navbar-mobile">
+                        <ul class="nav navbar-nav mr-auto float-left"></ul>
+                        <ul class="nav navbar-nav float-right">
+                            <li class="dropdown dropdown-user nav-item">
+                                <a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">
+                                    <span class="mr-1">Hoşgeldiniz,                 
+                                        <span class="user-name text-bold-700"><%=Session["FullName"] != null ? Session["FullName"].ToString() : "-"%></span>
+                                    </span>
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-right">
+                                    <a class="dropdown-item" href="#" onclick="Logout()"><i class="ft-power"></i>Çıkış</a>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="app-content content">
+            <div class="content-wrapper">
+                <div class="content-header row">
+                </div>
+                <div class="content-body">
+                    <asp:ContentPlaceHolder ID="cphContent" runat="server">
+                    </asp:ContentPlaceHolder>
+                </div>
+            </div>
+        </div>
         <script src="<%# Page.ResolveUrl("~") %>/asset/js/JQuery/jquery-3.4.1.min.js"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/js/JQuery-Validation/jquery.validate.min.js"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/js/Alertify/alertify.min.js"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/ui/jquery.sticky.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/jquery.sparkline.min.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/chart.min.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/raphael-min.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/morris.min.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/jvector/jquery-jvectormap-2.0.3.min.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/jvector/jquery-jvectormap-world-mill.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/data/jvector/visitor-data.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/core/app-menu.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/core/app.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/scripts/customizer.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/scripts/ui/breadcrumbs-with-stats.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/js/Custom/AuthenticationService.js"></script>
         <asp:ContentPlaceHolder ID="cphJS" runat="server">
         </asp:ContentPlaceHolder>
     </form>
