--- a/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/admin/main.Master
+++ b/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/admin/main.Master
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<html lang="tr">
+<html lang="TR">
 <head runat="server">
     <title></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
