--- a/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/main.Master
+++ b/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/main.Master
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<html lang="tr">
+<html lang="TR">
 <head runat="server">
     <title></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -33,9 +33,9 @@
             <div class="navbar-wrapper">
                 <div class="navbar-header">
                     <ul class="nav navbar-nav flex-row">
-                        <li class="nav-item mobile-menu d-md-none mr-auto mt-2"><a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="ft-menu"></i></a></li>
+                        <li class="nav-item mobile-menu d-md-none mr-auto mt-1"><a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="ft-menu"></i></a></li>
                         <li class="nav-item">
-                            <a class="navbar-brand" href="index.html">
+                            <a class="navbar-brand" href="Home">
                                 <img class="brand-logo" alt="modern admin logo" src="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/logo/EWLLogo.png">
                                 <h3 class="brand-text">E.W.L</h3>
                             </a>
