--- a/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/admin/main.Master
+++ b/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/admin/main.Master
@@ -5,31 +5,39 @@
 <html lang="TR">
 <head runat="server">
     <title></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="apple-touch-icon" sizes="57x57" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui" />
-    <link rel="apple-touch-icon" href="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/ico/apple-icon-120.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/ico/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700" rel="stylesheet">
-    <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700" rel="stylesheet" />
+    <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css" rel="stylesheet" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/css/Bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/css/Font-Awesome/font-awesome.min.css" rel="stylesheet" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/css/Alertify/alertify.min.css" rel="stylesheet" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/vendors.css" rel="stylesheet" type="text/css" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/app.css" rel="stylesheet" type="text/css" />
-    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/core/menu/menu-types/vertical-compact-menu.css" rel="stylesheet" type="text/css" />
-    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/core/colors/palette-gradient.css" rel="stylesheet" type="text/css" />
-    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/css/charts/jquery-jvectormap-2.0.3.css" rel="stylesheet" type="text/css" />
-    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/css/charts/morris.css" rel="stylesheet" type="text/css" />
-    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/fonts/simple-line-icons/style.css" rel="stylesheet" type="text/css" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/core/colors/palette-gradient.css" rel="stylesheet" type="text/css" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/css/Custom/AdminMaster.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="cphCSS" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body class="vertical-layout vertical-compact-menu 2-columns   menu-expanded fixed-navbar" data-open="click" data-menu="vertical-compact-menu" data-col="2-columns">
+<body class="horizontal-layout horizontal-menu horizontal-menu-padding 2-columns menu-expanded" data-open="click" data-menu="horizontal-menu" data-col="2-columns">
     <form id="EWL" runat="server">
-        <nav class="header-navbar navbar-expand-md navbar navbar-with-menu navbar-without-dd-arrow fixed-top navbar-dark bg-cyan navbar-shadow navbar-brand-center">
+        <nav class="header-navbar navbar-expand-md navbar navbar-with-menu navbar-without-dd-arrow navbar-static-top navbar-light navbar-brand-center bg-dark">
             <div class="navbar-wrapper">
                 <div class="navbar-header">
                     <ul class="nav navbar-nav flex-row">
@@ -37,21 +45,21 @@
                         <li class="nav-item">
                             <a class="navbar-brand" href="#" onclick="HomePage()">
                                 <img class="brand-logo" alt="E.W.L" src="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/logo/EWLLogo.png">
-                                <h3 class="brand-text">E.W.L</h3>
+                                <h3 class="brand-text text-white">E.W.L</h3>
                             </a>
                         </li>
                         <li class="nav-item d-md-none">
-                            <a class="nav-link open-navbar-container mt-2" data-toggle="collapse" data-target="#navbar-mobile"><i class="ft-menu font-large-1"></i></a>
+                            <a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="ft-menu font-large-1 text-white"></i></a>
                         </li>
                     </ul>
                 </div>
-                <div class="navbar-container content">
+                <div class="navbar-container content bg-dark">
                     <div class="collapse navbar-collapse" id="navbar-mobile">
-                        <ul class="nav navbar-nav float-right">
+                        <ul class="nav navbar-nav mr-auto float-left">
                             <li class="dropdown dropdown-user nav-item">
-                                <a class="dropdown-toggle nav-link dropdown-user-link mt-3" href="#" data-toggle="dropdown">
+                                <a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">
                                     <span class="mr-1">
-                                        <span class="user-name text-bold-700 text-dark"><%=Session["Username"]!=null ? Session["Username"].ToString() : "-"%></span>
+                                        <span class="user-name text-bold-700 text-white"><%=Session["Username"]!=null ? Session["Username"].ToString() : "-"%></span>
                                     </span>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-left">
@@ -63,10 +71,14 @@
                 </div>
             </div>
         </nav>
+        <div class="header-navbar navbar-expand-sm navbar navbar-horizontal navbar-fixed navbar-dark navbar-without-dd-arrow navbar-shadow d-none" role="navigation" data-menu="menu-wrapper">
+            <div class="navbar-container main-menu-content container center-layout" data-menu="menu-container"></div>
+        </div>
         <div class="app-content content c-content">
             <div class="content-wrapper">
                 <div class="content-header row">
                 </div>
+                <div class="main-menu menu-static menu-light menu-accordion menu-shadow" data-scroll-to-active="true"></div>
                 <div class="content-body">
                     <asp:ContentPlaceHolder ID="cphContent" runat="server">
                     </asp:ContentPlaceHolder>
@@ -76,15 +88,9 @@
         <script src="<%# Page.ResolveUrl("~") %>/asset/js/JQuery/jquery-3.4.1.min.js"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/js/Alertify/alertify.min.js"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/chart.min.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/raphael-min.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/morris.min.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/jvector/jquery-jvectormap-2.0.3.min.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/jvector/jquery-jvectormap-world-mill.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/data/jvector/visitor-data.js" type="text/javascript"></script>
+        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/ui/jquery.sticky.js" type="text/javascript"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/core/app-menu.js" type="text/javascript"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/core/app.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/scripts/customizer.js" type="text/javascript"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/js/Custom/AuthenticationService.js"></script>
         <asp:ContentPlaceHolder ID="cphJS" runat="server">
         </asp:ContentPlaceHolder>
