--- a/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/main.Master
+++ b/Yazılım Yapımı Dönem Projesi/Yazılım Yapımı Dönem Projesi/main.Master
@@ -5,11 +5,24 @@
 <html lang="TR">
 <head runat="server">
     <title></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="apple-touch-icon" sizes="57x57" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="<%# Page.ResolveUrl("~") %>/asset/img/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui" />
-    <link rel="apple-touch-icon" href="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/ico/apple-icon-120.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/ico/favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700" rel="stylesheet" />
     <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css" rel="stylesheet" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/css/Bootstrap/bootstrap.min.css" rel="stylesheet" />
@@ -17,23 +30,18 @@
     <link href="<%# Page.ResolveUrl("~") %>/asset/css/Alertify/alertify.min.css" rel="stylesheet" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/vendors.css" rel="stylesheet" type="text/css" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/app.css" rel="stylesheet" type="text/css" />
-    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/core/menu/menu-types/horizontal-menu.css" rel="stylesheet" type="text/css" />
-    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/core/colors/palette-gradient.css" rel="stylesheet" type="text/css" />
-    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/css/charts/jquery-jvectormap-2.0.3.css" rel="stylesheet" type="text/css" />
-    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/css/charts/morris.css" rel="stylesheet" type="text/css" />
-    <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/fonts/simple-line-icons/style.css" rel="stylesheet" type="text/css" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/app-assets/css/core/colors/palette-gradient.css" rel="stylesheet" type="text/css" />
     <link href="<%# Page.ResolveUrl("~") %>/asset/css/Custom/MemberMaster.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="cphCSS" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body>
+<body class="vertical-layout vertical-content-menu 2-columns menu-expanded fixed-navbar" data-open="click" data-menu="vertical-content-menu" data-col="2-columns">
     <form id="EWL" runat="server">
-        <nav class="header-navbar navbar-expand-md navbar navbar-with-menu navbar-without-dd-arrow navbar-static-top navbar-light navbar-brand-center">
+        <nav class="header-navbar navbar-expand-md navbar navbar-with-menu navbar-without-dd-arrow fixed-top navbar-light navbar-hide-on-scroll navbar-border navbar-shadow navbar-brand-center">
             <div class="navbar-wrapper">
                 <div class="navbar-header">
                     <ul class="nav navbar-nav flex-row">
-                        <li class="nav-item mobile-menu d-md-none mr-auto mt-1"><a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="ft-menu"></i></a></li>
+                        <li class="nav-item mobile-menu d-md-none mr-auto"><a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="ft-menu"></i></a></li>
                         <li class="nav-item">
                             <a class="navbar-brand" href="Home">
                                 <img class="brand-logo" alt="modern admin logo" src="<%# Page.ResolveUrl("~") %>/asset/app-assets/images/logo/EWLLogo.png">
@@ -61,10 +69,14 @@
                 </div>
             </div>
         </nav>
+        <div class="header-navbar navbar-expand-sm navbar navbar-horizontal navbar-fixed navbar-dark navbar-without-dd-arrow navbar-shadow d-none" role="navigation">
+            <div class="navbar-container main-menu-content container center-layout "></div>
+        </div>
         <div class="app-content content">
             <div class="content-wrapper">
                 <div class="content-header row">
                 </div>
+                <div class="main-menu menu-static menu-light menu-accordion menu-shadow" data-scroll-to-active="true"></div>
                 <div class="content-body">
                     <asp:ContentPlaceHolder ID="cphContent" runat="server">
                     </asp:ContentPlaceHolder>
@@ -76,17 +88,9 @@
         <script src="<%# Page.ResolveUrl("~") %>/asset/js/Alertify/alertify.min.js"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/ui/jquery.sticky.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/jquery.sparkline.min.js" type="text/javascript"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/chart.min.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/raphael-min.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/morris.min.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/jvector/jquery-jvectormap-2.0.3.min.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/vendors/js/charts/jvector/jquery-jvectormap-world-mill.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/data/jvector/visitor-data.js" type="text/javascript"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/core/app-menu.js" type="text/javascript"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/core/app.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/scripts/customizer.js" type="text/javascript"></script>
-        <script src="<%# Page.ResolveUrl("~") %>/asset/app-assets/js/scripts/ui/breadcrumbs-with-stats.js" type="text/javascript"></script>
         <script src="<%# Page.ResolveUrl("~") %>/asset/js/Custom/AuthenticationService.js"></script>
         <asp:ContentPlaceHolder ID="cphJS" runat="server">
         </asp:ContentPlaceHolder>
